bugfix: css hotfix to fix semantic ui react modal issue of being stuck in the upper left corner of DOM

--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -25,3 +25,12 @@
 #About {
   width: max-content;
 }
+
+.visible.transition {
+  margin-top: auto !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  display: inline-block !important;
+  position: relative;
+  top: 20%;
+}
